# target-linear

./: .gitignore  AGENTS.md  README.md  meltano.yml  pyproject.toml
.github/workflows/: constraints.txt  test.yml
sample_data/: customers.jsonl
target_linear/: __init__.py  client.py  mutations.py  schemas.py  sinks.py  target.py
tests/: __init__.py  conftest.py  test_core.py
tests/data_files/: customer_needs.singer  customers.singer  customers_camel.singer  unknown_stream.singer
